; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/usp10/extr_usp10.c_make_surrogate.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/usp10/extr_usp10.c_make_surrogate.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@make_surrogate.mask = internal constant i32 1023, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, i32*)* @make_surrogate to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @make_surrogate(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  store i32 %0, i32* %3, align 4
  store i32* %1, i32** %4, align 8
  %5 = load i32, i32* %3, align 4
  %6 = icmp sle i32 %5, 65535
  br i1 %6, label %7, label %13

7:                                                ; preds = %2
  %8 = load i32, i32* %3, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = getelementptr inbounds i32, i32* %9, i64 0
  store i32 %8, i32* %10, align 4
  %11 = load i32*, i32** %4, align 8
  %12 = getelementptr inbounds i32, i32* %11, i64 1
  store i32 0, i32* %12, align 4
  br label %27

13:                                               ; preds = %2
  %14 = load i32, i32* %3, align 4
  %15 = sub nsw i32 %14, 65536
  store i32 %15, i32* %3, align 4
  %16 = load i32, i32* %3, align 4
  %17 = ashr i32 %16, 10
  %18 = and i32 %17, 1023
  %19 = add nsw i32 %18, 55296
  %20 = load i32*, i32** %4, align 8
  %21 = getelementptr inbounds i32, i32* %20, i64 0
  store i32 %19, i32* %21, align 4
  %22 = load i32, i32* %3, align 4
  %23 = and i32 %22, 1023
  %24 = add nsw i32 %23, 56320
  %25 = load i32*, i32** %4, align 8
  %26 = getelementptr inbounds i32, i32* %25, i64 1
  store i32 %24, i32* %26, align 4
  br label %27

27:                                               ; preds = %13, %7
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
